# tensorflow_cmake_interface

./: .gitignore  CMakeLists.txt  LICENSE  README.md  make_interface.sh
cmake/: TensorflowCCConfig.cmake.in  TensorflowShared.cmake  build_tensorflow.sh
example/: CMakeLists.txt
example/cmake/: googletest.cmake
example/example/: CMakeLists.txt  example.cpp
example/tensorflow_test/: CMakeLists.txt  cancellation_test.cc  closure_test.cc  general_tf_test.cc  gtest_0.cc  inlinedVector.cc  inlined_vector.h  math_test.cc  tftypesTest.cc  types.h  typesTest.cc
